--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <script type="text/javascript" src="./app/controller/allRestaurants.js"></script>
 <script type="text/javascript" src="./app/controller/restaurant.js"></script>
 <script type="text/javascript" src="./app/controller/checkout.js"></script>
+<script type="text/javascript" src="./app/controller/summary.js"></script>
 
 <!-- Services -->
 <script type="text/javascript" src="./app/services/dataService.js"></script>
