--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!-- <script type="text/javascript" src="./node_modules/angular/angular.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
-
+ <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.js"></script>
 <!-- ui bootstrap -->
 <link rel="stylesheet" type="text/css" href="./node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
 <script type="text/javascript" src="./node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
@@ -25,7 +25,8 @@
 <script type="text/javascript" src="./app/controller/restaurant.js"></script>
 <script type="text/javascript" src="./app/controller/checkout.js"></script>
 <script type="text/javascript" src="./app/controller/summary.js"></script>
-
+<script type="text/javascript" src="./app/controller/signup.js"></script>
+<script type="text/javascript" src="./app/controller/login.js"></script>
 <!-- Services -->
 <script type="text/javascript" src="./app/services/dataService.js"></script>
 
