uiChanges pagination PassprtAuth

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
  -->
  	<div id="nav">
 		<div class="navlist">
-			<a href="#"><li class="nav-li">Link 1</li></a>
-			<a href="#"><li class="nav-li">Link 2</li></a>
-			<a href="#"><li class="nav-li">Link 3</li></a>
-			<a href="#"><li class="nav-li loggin">Checkout</li></a>
+			<a ui-sref="allRestaurants()"><li class="nav-li">Main Page</li></a>
+			<a ui-sref="summary()"><li class="nav-li">Orders</li></a>
+			<a ui-sref="checkout()"><li class="nav-li">Checkout</li></a>
+			<a ui-sref="login()"><li class="nav-li loggin">Login</li></a>
+			<a ui-sref="signup()"><li class="nav-li loggin">SignUp</li></a>
 		</div>
 	</div>
 <div ui-view>
